# QAI

./: .env_template  .gitignore  Cargo.toml  Dockerfile  README.md  index.html
src/: main.rs
src/chunk_file/: docx.rs  mod.rs  normal.rs  pdf.rs
src/knowledge/: brain.rs  matching.rs  mod.rs  storage.rs
