[package]
name = "qa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
async-openai = "0.10.3"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiktoken-rs = "0.4.0"
pdfium-render = "0.8.0"
anyhow = "1.0.70"
futures-util = "0.3.28"
futures = "0.3.28"
opendal = { version = "=0.30.2", features = ["services-sled"] }
byteorder = "1.4.3"
log = "0.4"
dotenv = "0.15.0"
lazy_static = "1.4.0"
env_logger = "0.10.0"
strsim = "0.10"
